--- a/src/app/components/screens/scenario-introduction-screen/scenario-introduction-screen.component.scss
+++ b/src/app/components/screens/scenario-introduction-screen/scenario-introduction-screen.component.scss
@@ -1,11 +1,12 @@
 @import '../../../../_imports.scss';
 
-
-.text {
-  text-align: center;
-  font-size: 120%;
+#content {
   padding: 0 20px;
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
+  .text {
+    text-align: center;
+    font-size: 120%;
+  }
 }
